🚧(functions): Add Geometry Node Related WGSL Functions
添加几何节点相关WGSL函数

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,7 @@
 {
   "recommendations": [
     "wgsl-analyzer.wgsl-analyzer",
-    "ms-python.python"
+    "ms-python.python",
+    "charliermarsh.ruff"
   ]
 }
