--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,2 @@
---index https://pypi.tuna.tsinghua.edu.cn/simple some-package
-fake-bpy-module-4.1
+--index https://pypi.tuna.tsinghua.edu.cn/simple
+fake-bpy-module-4.2
